Decision_tree_classifier.ipynb

--- a/Decision_tree_classifier.ipynb
+++ b/Decision_tree_classifier.ipynb
@@ -16,7 +16,7 @@
    "id": "fcee4e4e-5711-421f-9aeb-78e1b3cd0024",
    "metadata": {},
    "source": [
-    "### **TASK 6 - PREDICTION USING DECISION TREE ALGORITHAM**"
+    "### **TASK 6 - PREDICTION USING DECISION TREE ALGORITHM**"
    ]
   },
   {
